Beginning to style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/styles.scss" />
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
     <title>Blogr</title>
   </head>
   <body>
@@ -31,8 +31,8 @@
     <main>
         <h2 class="future__heading">Designed for the future</h2>
         <div class="future__container">
-            <div class="future__container--image">
-                <img src="./images/illustration-editor-mobile.svg" alt="illustration-editor-mobile">
+            <div class="future__container--editorbox">
+                <img class="future__container--img" src="./images/illustration-editor-mobile.svg" alt="illustration-editor-mobile">
             </div>
             <div class="future__container--textbox">
                 <div class="future__container--textbox1">
@@ -46,8 +46,8 @@
             </div>
         </div>
     </main>
-    <section class="blogr__phone">
-        <img src="./images/illustration-phones.svg" alt="illustration-phones">
+    <section class="blogr__phonebox">
+        <img class="blogr__phonebox--img" src="./images/illustration-phones.svg" alt="illustration-phones">
     </section>
     <section class="state__container">
         <div class="state__container--textbox">
@@ -56,8 +56,8 @@
         </div>
     </section>
     <section class="free__container">
-        <div class="free__container--image">
-            <img src="./images/illustration-laptop-mobile.svg" alt="illustration-laptop-mobile">
+        <div class="free__container--laptopbox">
+            <img class="free__container--img" src="./images/illustration-laptop-mobile.svg" alt="illustration-laptop-mobile">
         </div>
         <div class="free__container--textbox">
             <div class="free__container--textbox1">
@@ -105,6 +105,6 @@
     </footer>
 
 
-    <script src="./script/script.js"></script>
+    <!-- <script src="./script/script.js"></script> -->
   </body>
 </html>
