Text aligned with mockup, focusing on background styling now

--- a/index.html
+++ b/index.html
@@ -72,33 +72,33 @@
 
     </section>
     <footer>
-        <h2 class="footer__heading">Blogr</h2>
+        <h1 class="footer__heading">Blogr</h1>
         <div class="footer__container">
             <div class="footer__container--productbox">
                 <h3 class="footer__container--title">Product</h3>
                 <ul class="footer__container--lists">
-                    <li>Overview</li>
-                    <li>Pricing</li>
-                    <li>Marketplace</li>
-                    <li>Features</li>
-                    <li>Integrations</li>
+                    <li class="footer__container--li">Overview</li>
+                    <li class="footer__container--li">Pricing</li>
+                    <li class="footer__container--li">Marketplace</li>
+                    <li class="footer__container--li">Features</li>
+                    <li class="footer__container--li">Integrations</li>
                 </ul>
             </div>
             <div class="footer__container--companybox">
                 <h3 class="footer__container--title">Company</h3>
                 <ul class="footer__container--lists">
-                    <li>About</li>
-                    <li>Team</li>
-                    <li>Blog</li>
-                    <li>Careers</li>
+                    <li class="footer__container--li">About</li>
+                    <li class="footer__container--li">Team</li>
+                    <li class="footer__container--li">Blog</li>
+                    <li class="footer__container--li">Careers</li>
                 </ul>
              </div>
              <div class="footer__container--connectbox">
                  <h3 class="footer__container--title">Connect</h3>
                  <ul class="footer__container--lists">
-                    <li>Contact</li>
-                    <li>Newsletter</li>
-                    <li>LinkedIn</li>
+                    <li class="footer__container--li">Contact</li>
+                    <li class="footer__container--li">Newsletter</li>
+                    <li class="footer__container--li">LinkedIn</li>
                  </ul>
              </div>
         </div>
