Added header background styling, needs tweaking, focusing on buttons now

--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
   </head>
   <body>
     <header>
-      <nav class="nav__container"">
-        <div class="nav__container--heading">
-          <h1>Blogr</h1>
+        <div class="test">
+
+            <nav class="nav__container"">
+              <div class="nav__container--heading">
+                <h1>Blogr</h1>
+              </div>
+              <div class="nav__container--hamburger">
+                <div class="nav__container--line"></div>
+                <div class="nav__container--line"></div>
+                <div class="nav__container--line"></div>
+              </div>
+            </nav>
+            <div class="landing__container">
+              <h2 class="landing__container--title">A modern publishing platform</h2>
+              <p class="landing__container--description">Grow your audience and build your online brand</p>
+            </div>
+            <div class="landing__button">
+              <button class="landing__button--start">Start for Free</button>
+              <button class="landing__button--learn">Learn More</button>
+            </div>
         </div>
-        <div class="nav__container--hamburger">
-          <div class="nav__container--line"></div>
-          <div class="nav__container--line"></div>
-          <div class="nav__container--line"></div>
-        </div>
-      </nav>
-      <div class="landing__container">
-        <h2 class="landing__container--title">A modern publishing platform</h2>
-        <p class="landing__container--description">Grow your audience and build your online brand</p>
-      </div>
-      <div class="landing__button">
-        <button class="landing__button--start">Start for Free</button>
-        <button class="landing__button--learn">Learn More</button>
-      </div>
     </header>
     <main>
         <h2 class="future__heading">Designed for the future</h2>
