--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
         <img class="blogr__phonebox--img" src="./images/illustration-phones.svg" alt="illustration-phones">
     </section>
     <section class="state__container">
-        <div class="state__container--textbox">
-            <h2 class="state__container--title">State of the Art Infrastructure</h2>
-            <p class="state__container--description">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+        <div class="test2">
+
+            <div class="state__container--textbox">
+                <h2 class="state__container--title">State of the Art Infrastructure</h2>
+                <p class="state__container--description">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+            </div>
         </div>
     </section>
     <section class="free__container">
