Developing mobile dropdown..

--- a/index.html
+++ b/index.html
@@ -9,110 +9,166 @@
   </head>
   <body>
     <header>
-        <div class="test">
+      <div class="test">
+        <nav class="nav__container">
+          <div class="nav__container--heading">
+            <h1>Blogr</h1>
+          </div>
 
-            <nav class="nav__container"">
-              <div class="nav__container--heading">
-                <h1>Blogr</h1>
-              </div>
-              <label>
-                  <input type="checkbox">
-              <div class="hamburger">
-                <div class="top"></div>
-                <div class="middle"></div>
-                <div class="bottom"></div>
-              </div>
-            </label>
-            </nav>
-            <div class="landing__container">
-              <h2 class="landing__container--title">A modern publishing platform</h2>
-              <p class="landing__container--description">Grow your audience and build your online brand</p>
+          <div>
+            <ul class="nav__links">
+              <li class="nav__links--dropdownli">Product</li>
+              <li class="nav__links--dropdownli">Company</li>
+              <li class="nav__links--dropdownli">Connect</li>
+            </ul>
+          </div>
+          <label>
+            <input type="checkbox" />
+            <div class="hamburger">
+              <div class="top"></div>
+              <div class="middle"></div>
+              <div class="bottom"></div>
             </div>
-            <div class="landing__button">
-              <button class="landing__button--start">Start for Free</button>
-              <button class="landing__button--learn">Learn More</button>
-            </div>
+          </label>
+          <div class="login__container">
+            <a class="log-in" href="#">Login</a>
+            <button class="signup-btn">Sign Up</button>
+          </div>
+        </nav>
+        <div class="landing__container">
+          <h2 class="landing__container--title">
+            A modern publishing platform
+          </h2>
+          <p class="landing__container--description">
+            Grow your audience and build your online brand
+          </p>
         </div>
+        <div class="landing__button">
+          <button class="landing__button--start">Start for Free</button>
+          <button class="landing__button--learn">Learn More</button>
+        </div>
+      </div>
     </header>
     <main>
-        <h2 class="future__heading">Designed for the future</h2>
-        <div class="future__container">
-            <div class="future__container--editorbox">
-                <img class="future__container--img" src="./images/illustration-editor-mobile.svg" alt="illustration-editor-mobile">
-            </div>
-            <div class="future__container--textbox">
-                <div class="future__container--textbox1">
-                    <h2 class="future__container--title">Introducing an extensible editor</h2>
-                    <p class="future__container--description">Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, vidoes, and Markdown. Extensibility with plugins and themes provide easy eays to add functionality or change the looks of a blog.</p>
-                </div>
-                <div class="future__container--textbox2">
-                    <h2 class="future__container--title">Robust content management</h2>
-                    <p class="future__container--description">Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized cateogories, sections, formant, or flow. With this functionality, you're in full control.</p>
-                </div>
-            </div>
+      <h2 class="future__heading">Designed for the future</h2>
+      <div class="future__container">
+        <div class="future__container--editorbox">
+          <img
+            class="future__container--img"
+            src="./images/illustration-editor-mobile.svg"
+            alt="illustration-editor-mobile"
+          />
         </div>
+        <div class="future__container--textbox">
+          <div class="future__container--textbox1">
+            <h2 class="future__container--title">
+              Introducing an extensible editor
+            </h2>
+            <p class="future__container--description">
+              Blogr features an exceedingly intuitive interface which lets you
+              focus on one thing: creating content. The editor supports
+              management of multiple blogs and allows easy manipulation of
+              embeds such as images, vidoes, and Markdown. Extensibility with
+              plugins and themes provide easy eays to add functionality or
+              change the looks of a blog.
+            </p>
+          </div>
+          <div class="future__container--textbox2">
+            <h2 class="future__container--title">Robust content management</h2>
+            <p class="future__container--description">
+              Flexible content management enables users to easily move through
+              posts. Increase the usability of your blog by adding customized
+              cateogories, sections, formant, or flow. With this functionality,
+              you're in full control.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
     <section class="blogr__phonebox">
-        <img class="blogr__phonebox--img" src="./images/illustration-phones.svg" alt="illustration-phones">
+      <img
+        class="blogr__phonebox--img"
+        src="./images/illustration-phones.svg"
+        alt="illustration-phones"
+      />
     </section>
     <section class="state__container">
-        <div class="test2">
-
-            <div class="state__container--textbox">
-                <h2 class="state__container--title">State of the Art Infrastructure</h2>
-                <p class="state__container--description">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
-            </div>
+      <div class="test2">
+        <div class="state__container--textbox">
+          <h2 class="state__container--title">
+            State of the Art Infrastructure
+          </h2>
+          <p class="state__container--description">
+            With reliability and speed in mind, worldwide data centers provide
+            the backbone for ultra-fast connectivity. This ensures your site
+            will load instantly, no matter where your readers are, keeping your
+            site competitive.
+          </p>
         </div>
+      </div>
     </section>
     <section class="free__container">
-        <div class="free__container--laptopbox">
-            <img class="free__container--img" src="./images/illustration-laptop-mobile.svg" alt="illustration-laptop-mobile">
+      <div class="free__container--laptopbox">
+        <img
+          class="free__container--img"
+          src="./images/illustration-laptop-mobile.svg"
+          alt="illustration-laptop-mobile"
+        />
+      </div>
+      <div class="free__container--textbox">
+        <div class="free__container--textbox1">
+          <h2 class="free__container--title">Free, open, simple</h2>
+          <p class="free__container--description">
+            Blogr is a free and open source application backed by a large
+            community of helpful developers. It supports features such as code
+            syntax highlighting, RSS feeds, social media integration,
+            third-party commenting tools, and works seamlessly with Google
+            Analytics. The architecture is clean and is relatively easy to
+            learn.
+          </p>
         </div>
-        <div class="free__container--textbox">
-            <div class="free__container--textbox1">
-                <h2 class="free__container--title">Free, open, simple</h2>
-                <p class="free__container--description">Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
-            </div>
-            <div class="free__container--textbox2">
-                <h2 class="free__container--title">Powerful tooling</h2>
-                <p class="free__container--description">Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.</p>
-            </div>
+        <div class="free__container--textbox2">
+          <h2 class="free__container--title">Powerful tooling</h2>
+          <p class="free__container--description">
+            Batteries included. We built a simple and straightforward CLI tool
+            that makes customization and deployment a breeze, but capable of
+            producing even the most complicated sites.
+          </p>
         </div>
-
+      </div>
     </section>
     <footer>
-        <h1 class="footer__heading">Blogr</h1>
-        <div class="footer__container">
-            <div class="footer__container--productbox">
-                <h3 class="footer__container--title">Product</h3>
-                <ul class="footer__container--lists">
-                    <li class="footer__container--li">Overview</li>
-                    <li class="footer__container--li">Pricing</li>
-                    <li class="footer__container--li">Marketplace</li>
-                    <li class="footer__container--li">Features</li>
-                    <li class="footer__container--li">Integrations</li>
-                </ul>
-            </div>
-            <div class="footer__container--companybox">
-                <h3 class="footer__container--title">Company</h3>
-                <ul class="footer__container--lists">
-                    <li class="footer__container--li">About</li>
-                    <li class="footer__container--li">Team</li>
-                    <li class="footer__container--li">Blog</li>
-                    <li class="footer__container--li">Careers</li>
-                </ul>
-             </div>
-             <div class="footer__container--connectbox">
-                 <h3 class="footer__container--title">Connect</h3>
-                 <ul class="footer__container--lists">
-                    <li class="footer__container--li">Contact</li>
-                    <li class="footer__container--li">Newsletter</li>
-                    <li class="footer__container--li">LinkedIn</li>
-                 </ul>
-             </div>
+      <h1 class="footer__heading">Blogr</h1>
+      <div class="footer__container">
+        <div class="footer__container--productbox">
+          <h3 class="footer__container--title">Product</h3>
+          <ul class="footer__container--lists">
+            <li class="footer__container--li">Overview</li>
+            <li class="footer__container--li">Pricing</li>
+            <li class="footer__container--li">Marketplace</li>
+            <li class="footer__container--li">Features</li>
+            <li class="footer__container--li">Integrations</li>
+          </ul>
         </div>
+        <div class="footer__container--companybox">
+          <h3 class="footer__container--title">Company</h3>
+          <ul class="footer__container--lists">
+            <li class="footer__container--li">About</li>
+            <li class="footer__container--li">Team</li>
+            <li class="footer__container--li">Blog</li>
+            <li class="footer__container--li">Careers</li>
+          </ul>
+        </div>
+        <div class="footer__container--connectbox">
+          <h3 class="footer__container--title">Connect</h3>
+          <ul class="footer__container--lists">
+            <li class="footer__container--li">Contact</li>
+            <li class="footer__container--li">Newsletter</li>
+            <li class="footer__container--li">LinkedIn</li>
+          </ul>
+        </div>
+      </div>
     </footer>
-
 
     <!-- <script src="./script/script.js"></script> -->
   </body>
