mobile nav, work in progess

--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
             <h1>Blogr</h1>
           </div>
 
-          <div>
-            <ul class="nav__links">
-              <li class="nav__links--dropdownli">Product</li>
-              <li class="nav__links--dropdownli">Company</li>
-              <li class="nav__links--dropdownli">Connect</li>
-            </ul>
-          </div>
+          <ul class="nav__links">
+            <li class="nav__links--dropdownli">Product</li>
+            <li class="nav__links--dropdownli">Company</li>
+            <li class="nav__links--dropdownli">Connect</li>
+            <hr class="divider" />
+            <div class="login__container">
+              <a class="log-in" href="#">Login</a>
+              <button class="signup-btn">Sign Up</button>
+            </div>
+          </ul>
+
           <label>
             <input type="checkbox" />
             <div class="hamburger">
@@ -30,10 +34,6 @@
               <div class="bottom"></div>
             </div>
           </label>
-          <div class="login__container">
-            <a class="log-in" href="#">Login</a>
-            <button class="signup-btn">Sign Up</button>
-          </div>
         </nav>
         <div class="landing__container">
           <h2 class="landing__container--title">
