added arrow icons

--- a/index.html
+++ b/index.html
@@ -16,9 +16,30 @@
           </div>
 
           <ul class="nav__links">
-            <li class="nav__links--dropdownli">Product</li>
-            <li class="nav__links--dropdownli">Company</li>
-            <li class="nav__links--dropdownli">Connect</li>
+            <li>
+              <a href="#">Product</a
+              ><img
+                class="menu-arrow"
+                src="./images/icon-arrow-dark.svg"
+                alt="arrow"
+              />
+            </li>
+            <li>
+              <a href="#">Company</a
+              ><img
+                class="menu-arrow"
+                src="./images/icon-arrow-dark.svg"
+                alt="arrow"
+              />
+            </li>
+            <li>
+              <a href="#">Connect</a
+              ><img
+                class="menu-arrow"
+                src="./images/icon-arrow-dark.svg"
+                alt="arrow"
+              />
+            </li>
             <hr class="divider" />
             <div class="login__container">
               <a class="log-in" href="#">Login</a>
