Adding functionality to mobile menu

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
                 src="./images/icon-arrow-dark.svg"
                 alt="arrow"
               />
+              <ul class="sub-menu">
+                <li>Overview</li>
+                <li>Pricing</li>
+                <li>Marketplace</li>
+                <li>Features</li>
+                <li>Integrations</li>
+              </ul>
             </li>
             <li>
               <a href="#">Company</a
@@ -31,6 +38,12 @@
                 src="./images/icon-arrow-dark.svg"
                 alt="arrow"
               />
+              <ul class="sub-menu">
+                <li>About</li>
+                <li>Team</li>
+                <li>Blog</li>
+                <li>Careers</li>
+              </ul>
             </li>
             <li>
               <a href="#">Connect</a
@@ -39,6 +52,11 @@
                 src="./images/icon-arrow-dark.svg"
                 alt="arrow"
               />
+              <ul class="sub-menu">
+                <li>Contact</li>
+                <li>Newsletter</li>
+                <li>LinkedIn</li>
+              </ul>
             </li>
             <hr class="divider" />
             <div class="login__container">
@@ -191,6 +209,6 @@
       </div>
     </footer>
 
-    <!-- <script src="./script/script.js"></script> -->
+    <script src="./script/script.js"></script>
   </body>
 </html>
