Mobile menu dropdown functionality complete

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           </div>
 
           <ul class="nav__links">
-            <li>
-              <a href="#">Product</a
-              ><img
+            <li class="parent">
+              Product
+              <img
                 class="menu-arrow"
                 src="./images/icon-arrow-dark.svg"
                 alt="arrow"
@@ -31,9 +31,9 @@
                 <li>Integrations</li>
               </ul>
             </li>
-            <li>
-              <a href="#">Company</a
-              ><img
+            <li class="parent">
+              Company
+              <img
                 class="menu-arrow"
                 src="./images/icon-arrow-dark.svg"
                 alt="arrow"
@@ -45,9 +45,9 @@
                 <li>Careers</li>
               </ul>
             </li>
-            <li>
-              <a href="#">Connect</a
-              ><img
+            <li class="parent">
+              Connect
+              <img
                 class="menu-arrow"
                 src="./images/icon-arrow-dark.svg"
                 alt="arrow"
