Mobile menu icon functionality complete

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <header>
       <div class="test">
         <nav class="nav__container">
-          <div class="nav__container--heading">
-            <h1>Blogr</h1>
-          </div>
+          <h1 class="nav__container--heading">Blogr</h1>
 
           <ul class="nav__links">
             <li class="parent">
@@ -67,7 +65,7 @@
 
           <label>
             <input type="checkbox" />
-            <div class="hamburger">
+            <div id="hamburger" class="hamburger">
               <div class="top"></div>
               <div class="middle"></div>
               <div class="bottom"></div>
