--- a/index.html
+++ b/index.html
@@ -14,48 +14,50 @@
           <h1 class="nav__container--heading">Blogr</h1>
 
           <ul class="nav__links">
-            <li class="parent">
-              Product
-              <img
-                class="menu-arrow"
-                src="./images/icon-arrow-dark.svg"
-                alt="arrow"
-              />
-              <ul class="sub-menu">
-                <li>Overview</li>
-                <li>Pricing</li>
-                <li>Marketplace</li>
-                <li>Features</li>
-                <li>Integrations</li>
-              </ul>
-            </li>
-            <li class="parent">
-              Company
-              <img
-                class="menu-arrow"
-                src="./images/icon-arrow-dark.svg"
-                alt="arrow"
-              />
-              <ul class="sub-menu">
-                <li>About</li>
-                <li>Team</li>
-                <li>Blog</li>
-                <li>Careers</li>
-              </ul>
-            </li>
-            <li class="parent">
-              Connect
-              <img
-                class="menu-arrow"
-                src="./images/icon-arrow-dark.svg"
-                alt="arrow"
-              />
-              <ul class="sub-menu">
-                <li>Contact</li>
-                <li>Newsletter</li>
-                <li>LinkedIn</li>
-              </ul>
-            </li>
+            <div class="desktop__nav">
+              <li class="parent">
+                Product
+                <img
+                  class="menu-arrow"
+                  src="./images/icon-arrow-dark.svg"
+                  alt="arrow"
+                />
+                <ul class="sub-menu">
+                  <li>Overview</li>
+                  <li>Pricing</li>
+                  <li>Marketplace</li>
+                  <li>Features</li>
+                  <li>Integrations</li>
+                </ul>
+              </li>
+              <li class="parent">
+                Company
+                <img
+                  class="menu-arrow"
+                  src="./images/icon-arrow-dark.svg"
+                  alt="arrow"
+                />
+                <ul class="sub-menu">
+                  <li>About</li>
+                  <li>Team</li>
+                  <li>Blog</li>
+                  <li>Careers</li>
+                </ul>
+              </li>
+              <li class="parent">
+                Connect
+                <img
+                  class="menu-arrow"
+                  src="./images/icon-arrow-dark.svg"
+                  alt="arrow"
+                />
+                <ul class="sub-menu">
+                  <li>Contact</li>
+                  <li>Newsletter</li>
+                  <li>LinkedIn</li>
+                </ul>
+              </li>
+            </div>
             <hr class="divider" />
             <div class="login__container">
               <a class="log-in" href="#">Login</a>
