desktop navbar being worked on

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
           <ul class="nav__links">
             <div class="desktop__nav">
               <li class="parent">
-                Product
+                <a href="#">Product</a>
+
                 <img
                   class="menu-arrow"
                   src="./images/icon-arrow-dark.svg"
@@ -31,7 +32,7 @@
                 </ul>
               </li>
               <li class="parent">
-                Company
+                <a href="#">Company</a>
                 <img
                   class="menu-arrow"
                   src="./images/icon-arrow-dark.svg"
@@ -45,7 +46,7 @@
                 </ul>
               </li>
               <li class="parent">
-                Connect
+                <a href="#">Connect</a>
                 <img
                   class="menu-arrow"
                   src="./images/icon-arrow-dark.svg"
