--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <img
                   class="menu-arrow"
-                  src="./images/icon-arrow-dark.svg"
+                  src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
                 <ul class="sub-menu">
@@ -35,7 +35,7 @@
                 <a href="#">Company</a>
                 <img
                   class="menu-arrow"
-                  src="./images/icon-arrow-dark.svg"
+                  src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
                 <ul class="sub-menu">
@@ -49,7 +49,7 @@
                 <a href="#">Connect</a>
                 <img
                   class="menu-arrow"
-                  src="./images/icon-arrow-dark.svg"
+                  src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
                 <ul class="sub-menu">
