--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav class="nav__container">
           <h1 class="nav__container--heading">Blogr</h1>
 
-          <ul class="nav__links">
+          <ul id="nav__links" class="nav__links">
             <div class="desktop__nav">
               <li class="parent">
                 <a href="#">Product</a>
 
                 <img
-                  class="menu-arrow"
+                  class="menu-arrow menu-arrow-down"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
@@ -34,7 +34,7 @@
               <li class="parent">
                 <a href="#">Company</a>
                 <img
-                  class="menu-arrow"
+                  class="menu-arrow menu-arrow-down"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
@@ -48,7 +48,7 @@
               <li class="parent">
                 <a href="#">Connect</a>
                 <img
-                  class="menu-arrow"
+                  class="menu-arrow menu-arrow-down"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
