--- a/index.html
+++ b/index.html
@@ -94,9 +94,14 @@
       <div class="future__container">
         <div class="future__container--editorbox">
           <img
-            class="future__container--img"
+            class="future__container--img mobile"
             src="./images/illustration-editor-mobile.svg"
             alt="illustration-editor-mobile"
+          />
+          <img
+            class="future__container--img desktop"
+            src="./images/illustration-editor-desktop.svg"
+            alt="illustration-editor-desktop"
           />
         </div>
         <div class="future__container--textbox">
@@ -152,9 +157,14 @@
     <section class="free__container">
       <div class="free__container--laptopbox">
         <img
-          class="free__container--img"
+          class="free__container--img mobile"
           src="./images/illustration-laptop-mobile.svg"
           alt="illustration-laptop-mobile"
+        />
+        <img
+          class="free__container--img desktop"
+          src="./images/illustration-laptop-desktop.svg"
+          alt="illustration-laptop-desktop"
         />
       </div>
       <div class="free__container--textbox">
