--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
                 <a href="#">Product</a>
 
                 <img
-                  class="menu-arrow menu-arrow-down"
+                  class="menu-arrow menu-arrow-down mobile"
+                  src="images/icon-arrow-dark.svg"
+                  alt="arrow"
+                />
+                <img
+                  class="menu-arrow menu-arrow-down desktop"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
@@ -34,7 +39,12 @@
               <li class="parent">
                 <a href="#">Company</a>
                 <img
-                  class="menu-arrow menu-arrow-down"
+                  class="menu-arrow menu-arrow-down mobile"
+                  src="images/icon-arrow-dark.svg"
+                  alt="arrow"
+                />
+                <img
+                  class="menu-arrow menu-arrow-down desktop"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
@@ -48,7 +58,12 @@
               <li class="parent">
                 <a href="#">Connect</a>
                 <img
-                  class="menu-arrow menu-arrow-down"
+                  class="menu-arrow menu-arrow-down mobile"
+                  src="images/icon-arrow-dark.svg"
+                  alt="arrow"
+                />
+                <img
+                  class="menu-arrow menu-arrow-down desktop"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
