--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <header>
       <div class="test">
         <nav class="nav__container">
-          <h1 class="nav__container--heading">Blogr</h1>
+          <img
+            class="nav__container--heading"
+            src="./images/logo.svg"
+            alt="logo"
+          />
 
           <ul id="nav__links" class="nav__links">
             <div class="desktop__nav">
@@ -19,12 +23,12 @@
                 <a href="#">Product</a>
 
                 <img
-                  class="menu-arrow menu-arrow-down mobile"
+                  class="menu-arrow mobile"
                   src="images/icon-arrow-dark.svg"
                   alt="arrow"
                 />
                 <img
-                  class="menu-arrow menu-arrow-down desktop"
+                  class="menu-arrow desktop"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
@@ -39,12 +43,12 @@
               <li class="parent">
                 <a href="#">Company</a>
                 <img
-                  class="menu-arrow menu-arrow-down mobile"
+                  class="menu-arrow mobile"
                   src="images/icon-arrow-dark.svg"
                   alt="arrow"
                 />
                 <img
-                  class="menu-arrow menu-arrow-down desktop"
+                  class="menu-arrow desktop"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
@@ -58,12 +62,12 @@
               <li class="parent">
                 <a href="#">Connect</a>
                 <img
-                  class="menu-arrow menu-arrow-down mobile"
+                  class="menu-arrow mobile"
                   src="images/icon-arrow-dark.svg"
                   alt="arrow"
                 />
                 <img
-                  class="menu-arrow menu-arrow-down desktop"
+                  class="menu-arrow desktop"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
                 />
