--- a/index.html
+++ b/index.html
@@ -242,5 +242,19 @@
     </footer>
 
     <script src="./script/script.js"></script>
+    <div class="attribution">
+      <span
+        >Challenge by
+        <a href="https://www.frontendmentor.io/challenges" target="_blank"
+          >Frontend Mentor</a
+        ></span
+      >
+      <span
+        >Coded by
+        <a href="https://github.com/morfeli" target="_blank"
+          >Felipe Moreira</a
+        ></span
+      >
+    </div>
   </body>
 </html>
