fixing responsive nav menu

--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
           <ul class="footer__container--lists">
             <li class="footer__container--li">Contact</li>
             <li class="footer__container--li">Newsletter</li>
-            <li class="footer__container--li">LinkedIn hello bye</li>
+            <li class="footer__container--li">
+              LinkedIn hello bye did it work
+            </li>
           </ul>
         </div>
       </div>
