--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
 
           <div class="navbar-links">
             <ul>
-              <li><a href="#">Product</a></li>
-              <li><a href="#">Company</a></li>
-              <li><a href="#">Connect</a></li>
+              <li>
+                <a href="#">Product</a>
+              </li>
+              <li>
+                <a href="#">Company</a>
+              </li>
+              <li>
+                <a href="#">Connect</a>
+              </li>
             </ul>
             <div class="login__container">
               <a class="log-in" href="#">Login</a>
