--- a/index.html
+++ b/index.html
@@ -21,14 +21,71 @@
 
           <div class="navbar-links">
             <ul>
-              <li>
-                <a href="#">Product</a>
-              </li>
-              <li>
-                <a href="#">Company</a>
-              </li>
-              <li>
+              <li class="parent">
+
+
+                    <a href="#">Product</a>
+                    <img
+                      class="menu-arrow mobile-arrow"
+                      src="images/icon-arrow-dark.svg"
+                      alt="arrow"
+                    />
+                    <img
+                      class="menu-arrow desktop-arrow"
+                      src="./images/icon-arrow-light.svg"
+                      alt="arrow"
+                    />
+                    <ul class="sub-menu">
+                      <li>Overview</li>
+                      <li>Pricing</li>
+                      <li>Marketplace</li>
+                      <li>Features</li>
+                      <li>Integrations</li>
+                    </ul>
+                </li>
+
+              <li class="parent">
+
+                  <a href="#">Company</a>
+                  <img
+                  class="menu-arrow mobile-arrow"
+                  src="images/icon-arrow-dark.svg"
+                  alt="arrow"
+                  />
+                  <img
+                  class="menu-arrow desktop-arrow"
+                  src="./images/icon-arrow-light.svg"
+                  alt="arrow"
+                  />
+                </li>
+                <ul class="sub-menu">
+                    <li>About</li>
+                    <li>Team</li>
+                    <li>Blog</li>
+                    <li>Careers</li>
+                </ul>
+
+            </li>
+
+              <li class="parent">
+
                 <a href="#">Connect</a>
+                <img
+                  class="menu-arrow mobile-arrow"
+                  src="images/icon-arrow-dark.svg"
+                  alt="arrow"
+                />
+                <img
+                  class="menu-arrow desktop-arrow"
+                  src="./images/icon-arrow-light.svg"
+                  alt="arrow"
+                />
+                <ul class="sub-menu">
+                    <li>Contact</li>
+                    <li>Newsletter</li>
+                    <li>LinkedIn</li>
+                  </ul>
+
               </li>
             </ul>
             <div class="login__container">
