final tweaks, foreal this time

--- a/index.html
+++ b/index.html
@@ -13,63 +13,58 @@
         <nav class="navbar">
           <img class="navbar__heading" src="./images/logo.svg" alt="logo" />
 
-          <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </a>
+          <div href="#" class="toggle-button">
+            <div class="bar bar1"></div>
+            <div class="bar bar2"></div>
+            <div class="bar bar3"></div>
+          </div>
 
           <div class="navbar-links">
             <ul>
               <li class="parent">
-
-
-                    <a href="#">Product</a>
-                    <img
-                      class="menu-arrow mobile-arrow"
-                      src="images/icon-arrow-dark.svg"
-                      alt="arrow"
-                    />
-                    <img
-                      class="menu-arrow desktop-arrow"
-                      src="./images/icon-arrow-light.svg"
-                      alt="arrow"
-                    />
-                    <ul class="sub-menu">
-                      <li>Overview</li>
-                      <li>Pricing</li>
-                      <li>Marketplace</li>
-                      <li>Features</li>
-                      <li>Integrations</li>
-                    </ul>
-                </li>
-
-              <li class="parent">
-
-                  <a href="#">Company</a>
-                  <img
+                <a class="navbar-item" href="#">Product</a>
+                <img
                   class="menu-arrow mobile-arrow"
                   src="images/icon-arrow-dark.svg"
                   alt="arrow"
-                  />
-                  <img
+                />
+                <img
                   class="menu-arrow desktop-arrow"
                   src="./images/icon-arrow-light.svg"
                   alt="arrow"
-                  />
-                </li>
+                />
                 <ul class="sub-menu">
-                    <li>About</li>
-                    <li>Team</li>
-                    <li>Blog</li>
-                    <li>Careers</li>
+                  <li>Overview</li>
+                  <li>Pricing</li>
+                  <li>Marketplace</li>
+                  <li>Features</li>
+                  <li>Integrations</li>
                 </ul>
-
-            </li>
+              </li>
 
               <li class="parent">
+                <a class="navbar-item" href="#">Company</a>
+                <img
+                  class="menu-arrow mobile-arrow"
+                  src="images/icon-arrow-dark.svg"
+                  alt="arrow"
+                />
+                <img
+                  class="menu-arrow desktop-arrow"
+                  src="./images/icon-arrow-light.svg"
+                  alt="arrow"
+                />
 
-                <a href="#">Connect</a>
+                <ul class="sub-menu">
+                  <li>About</li>
+                  <li>Team</li>
+                  <li>Blog</li>
+                  <li>Careers</li>
+                </ul>
+              </li>
+
+              <li class="parent">
+                <a class="navbar-item" href="#">Connect</a>
                 <img
                   class="menu-arrow mobile-arrow"
                   src="images/icon-arrow-dark.svg"
@@ -81,13 +76,13 @@
                   alt="arrow"
                 />
                 <ul class="sub-menu">
-                    <li>Contact</li>
-                    <li>Newsletter</li>
-                    <li>LinkedIn</li>
-                  </ul>
-
+                  <li>Contact</li>
+                  <li>Newsletter</li>
+                  <li>LinkedIn</li>
+                </ul>
               </li>
             </ul>
+            <hr class="divider" />
             <div class="login__container">
               <a class="log-in" href="#">Login</a>
               <button class="signup-btn">Sign Up</button>
