--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
         <nav class="navbar">
           <img class="navbar__heading" src="./images/logo.svg" alt="logo" />
 
-          <div href="#" class="toggle-button">
-            <div class="bar bar1"></div>
-            <div class="bar bar2"></div>
-            <div class="bar bar3"></div>
-          </div>
+          <label>
+            <input type="checkbox" />
+            <div href="#" class="toggle-button">
+              <div class="top"></div>
+              <div class="middle"></div>
+              <div class="bottom"></div>
+            </div>
+          </label>
 
           <div class="navbar-links">
             <ul>
