--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
       </div>
     </section>
     <footer>
-      <h1 class="footer__heading">Blogr</h1>
+      <img class="footer__heading" src="./images/logo.svg" alt="logo" />
+
       <div class="footer__container">
         <div class="footer__container--productbox">
           <h3 class="footer__container--title">Product</h3>
